--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.3.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
