--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.3.0",
+    "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18"
