--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/interaction-light": "^3.3.0",
     "@tsparticles/path-curves": "^3.3.0",
     "@tsparticles/path-polygon": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
@@ -16,7 +17,9 @@
     "lottie-react": "^2.4.0",
     "next": "14.2.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-katex": "^3.0.1",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "@types/node": "^20",
